--- a/NYT.html
+++ b/NYT.html
@@ -10,7 +10,7 @@
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
-     <script src="./Times.js"></script>
+     <script src="Times.js"></script>
   
     
     <title>New York Times Search</title>
